@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.632 2006/03/30 17:50:31 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.633 2006/03/31 01:05:43 agaffney Exp $
 
   30 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
@@ -8,6 +8,7 @@
   fix up detect_devices() to detect cciss/ida arrays
   src/templates/x86ArchitectureTemplate.py:
   use get_devnode() instead of figuring out the devnode
+  skip first 3 steps if partition layout hasn't changed
   src/GLIArchitectureTemplate.py:
   use get_devnode() in local mount and fstab stuff
 
